feat: edicion y borrado de receta en Desktop
RecipeDetailView: barra de acciones con botones Editar y Eliminar,
visibles solo cuando hay una receta seleccionada.
- Editar: carga ingredientes y pasos del servidor, abre RecipeFormDialog
  en modo edicion pre-rellenado. Al guardar refresca detalle y lista.
- Eliminar: dialogo de confirmacion antes de soft delete via API.
  Al confirmar limpia el detalle y refresca la lista.

RecipeFormDialog refactorizado con factory methods forCreate()/forEdit():
- forEdit() acepta receta + ingredientes + pasos y pre-rellena todos los campos.
- doSave() usa PUT update en modo edicion, POST create en modo creacion.
- Boton de guardar cambia etiqueta segun modo.

RecipeRepository: metodos update() y delete() nuevos.
RecipeCreateDtos: UpdateRecipeRequest record anadido.
CSS: clase delete-button con tono rojo para diferenciacion visual.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>